fix(jdk17): replace Java 21 List.getFirst()/getLast() in final chunk-5 cherry-picks
The last few chunk-5 cherry-picks (#5416 descending-tail perf, #4743 oversized
Raft entry / invalid sub-index tests, #5413 dense-vector latency IT, background
thread lifecycle test) introduced List.getFirst()/getLast() calls (Java 21+) on
plain List<Object[]>/List<Thread>/List<TypeIndex>/List<RID>/List<DecodedEntry>/
List<Throwable> types. Replaced with list.get(0)/list.get(list.size() - 1) to
keep the java17 branch on maven-compiler-plugin release 17.